<resources>
    <string name="app_name">Room Radar</string>
    <string name="home_icon_name">Home</string>
    <string name="maps_icon_name">Maps</string>
    <string name="notifications_icon_name">Notifications</string>
    <string name="profile_icon_name">Profile</string>
    <string name="email_text">Email</string>
    <string name="contact_number_text">Contact Number</string>
    <string name="password_text">Password</string>
    <string name="firstname_text">Firstname</string>
    <string name="lastname_text">Lastname</string>
    <string name="forgot_password_text">Forgot password?</string>
    <string name="login_button_text">Log In</string>
    <string name="register_button_text">Sign Up</string>
    <string name="register1_text">Register as Tenant</string>
    <string name="register2_text">Register as Landlord</string>
    <string name="no_account_text">Don\'t have an account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>