<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:padding="10dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/loginPageLogo"
            android:layout_width="265dp"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/logo_with_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailLoginInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableStart="@drawable/email_icon"
                android:drawablePadding="10dp"
                android:hint="@string/email_text"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordLoginInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableStart="@drawable/lock_icon"
                android:drawableEnd="@drawable/password_protected_icon"
                android:drawablePadding="10dp"
                android:hint="@string/password_text"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="end"
            android:text="@string/forgot_password_text"
            android:textSize="14sp" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="#0B1650"
            android:text="@string/login_button_text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/no_account_text"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/registerAsTenantButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#2FC5F3"
            android:text="@string/register1_text" />

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="#2FC5F3"
            android:text="@string/register2_text" />
    </LinearLayout>


</LinearLayout>