<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFDFD"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".RegisterTenantActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:padding="10dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/registerTenantPageLogo"
            android:layout_width="265dp"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/logo_with_text" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstnameSignUpTenantInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableStart="@drawable/profile_icon2"
                    android:drawablePadding="10dp"
                    android:hint="@string/firstname_text"
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastnameSignUpTenantInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableStart="@drawable/profile_icon2"
                    android:drawablePadding="10dp"
                    android:hint="@string/lastname_text"
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailSignUpTenantInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableStart="@drawable/email_icon"
                    android:drawablePadding="10dp"
                    android:hint="@string/email_text"
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordSignUpTenantInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableStart="@drawable/lock_icon"
                    android:drawablePadding="10dp"
                    android:hint="@string/password_text"
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
<<<<<<< HEAD
                android:id="@+id/signUpButtonTenant"
=======
                android:id="@+id/signUpButton"
>>>>>>> origin/main
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:backgroundTint="#0B1650"
                android:gravity="center"
                android:text="@string/register_button_text" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
